# ktbs56

./: CMakeLists.txt
cmake/: clang_complete.in
fpga/src/: main.sv  tb_main.sv
inc/: adc_spi_driver.hpp  basic_task.hpp  bsp_macro.hpp  buttons_driver.hpp  core.hpp  current_sources_driver.hpp  display_driver.hpp  fpga_driver.hpp  usart_driver.hpp
rtos/inc/: FreeRTOSConfig.h
src/: adc_spi_driver.cpp  buttons_driver.cpp  core.cpp  current_sources_driver.cpp  display_driver.cpp  fpga_driver.cpp  main.cpp  usart_driver.cpp
stdperiph/inc/: stm32f10x_conf.h
system/inc/: startup.hpp
system/src/: startup.cpp
